--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-sort-class-members": "^1.19.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "typescript": "^5.2.2",
-    "semantic-release": "^22.0.6"
+    "semantic-release": "^22.0.6",
+    "typescript": "^5.2.2"
   },
   "packageManager": "yarn@4.0.1",
   "scripts": {
