--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yarn-spinner-xstate",
   "version": "0.0.0-development",
-  "main": "index.js",
+  "main": "./src/index.js",
   "license": "BSD-3-Clause",
   "type": "module",
   "author": {
