--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Types
+types
+
 # Logs
 logs
 *.log
@@ -54,8 +57,15 @@ typings/
 # Output of 'npm pack'
 *.tgz
 
-# Yarn Integrity file
+# Yarn files
 .yarn-integrity
+.yarn/*
+!.yarn/cache
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 # dotenv environment variables file
 .env
