--- a/package.json
+++ b/package.json
@@ -9,6 +9,19 @@
     "email": "t@trezy.com",
     "url": "http://trezy.codes"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/trezy-studios/yarn-spinner-xstate.git"
+  },
+  "scripts": {
+    "semantic-release": "semantic-release"
+  },
+  "files": [
+    "src/**/*",
+    "CODE_OF_CONDUCT.md",
+    "tsconfig.json",
+    "types/**/*"
+  ],
   "dependencies": {
     "bbcode-ast": "^1.1.0",
     "uuid": "^9.0.1"
@@ -34,12 +47,5 @@
   "peerDependencies": {
     "xstate": "^4.38.3"
   },
-  "packageManager": "yarn@4.0.1",
-  "scripts": {
-    "semantic-release": "semantic-release"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/trezy-studios/yarn-spinner-xstate.git"
-  }
+  "packageManager": "yarn@4.0.1"
 }
