--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "semantic-release": "^22.0.6",
     "typescript": "^5.2.2",
-    "xstate": "^4.38.3"
+    "xstate": "5.0.0-beta.44"
   },
   "peerDependencies": {
-    "xstate": "^4.38.3"
+    "xstate": "5.0.0-beta.44"
   },
   "packageManager": "yarn@4.0.1"
 }
