--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "generateTypes": "tsc",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "test": "NODE_ENV=test nyc mocha"
   },
   "files": [
     "src/**/*",
@@ -29,10 +30,15 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^20.8.9",
+    "@types/sinon": "^17.0.0",
     "@types/uuid": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "chai": "^5.1.0",
+    "coveralls": "^3.1.1",
     "eslint": "^8.52.0",
     "eslint-plugin-editorconfig": "^4.0.3",
     "eslint-plugin-import": "^2.29.0",
@@ -42,7 +48,10 @@
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-sort-class-members": "^1.19.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "mocha": "^10.3.0",
+    "nyc": "^15.1.0",
     "semantic-release": "^22.0.6",
+    "sinon": "^17.0.1",
     "typescript": "^5.2.2",
     "xstate": "^5.0.0"
   },
